// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should match snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <button
        type="submit"
      >
        Search
      </button>
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
    </form>
  </div>
  <div>
    <div
      className="table"
    >
      <div
        className="table-header"
      >
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        >
          ID
        </span>
        <span
          style={
            Object {
              "width": "40%",
            }
          }
        >
          <button
            className="button-inline"
            onClick={[Function]}
          >
            Title
          </button>
        </span>
         
        <span
          style={
            Object {
              "width": "20%",
            }
          }
        >
          <button
            className="button-inline"
            onClick={[Function]}
          >
            Author
          </button>
        </span>
        <span
          style={
            Object {
              "width": "20%",
            }
          }
        >
          <button
            className="button-inline"
            onClick={[Function]}
          >
            Points
          </button>
        </span>
        <span
          style={
            Object {
              "width": "10%",
            }
          }
        >
          Remove
        </span>
      </div>
    </div>
    <div
      className="interactions"
    >
      <div>
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-spinner fa-w-16 fa-spin fa-lg fa-rotate-90 "
          data-icon="spinner"
          data-prefix="fas"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Button should match snapshot 1`] = `
<button
  className=""
>
  Button
</button>
`;

exports[`Search should match snapshot 1`] = `
<form>
  <button
    type="submit"
  >
    Search
  </button>
  <input
    type="text"
  />
</form>
`;

exports[`Table should match snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      ID
    </span>
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
      >
        Title
      </button>
    </span>
     
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
      >
        Author
      </button>
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
      >
        Points
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Remove
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      y
    </span>
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        1
      </a>
    </span>
     
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
      >
        Remove
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      z
    </span>
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        2
      </a>
    </span>
     
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
      >
        Remove
      </button>
    </span>
  </div>
</div>
`;
